#73 clickable area around actions too big - fixed sidebar

--- a/src/main/webapp/themes/default/css/fulldoc.css
+++ b/src/main/webapp/themes/default/css/fulldoc.css
@@ -298,7 +298,7 @@ a.action-link span,
 	
 	a.action-link, span.icon-share {
 		float:			none;
-		display:		block;
+		xxxxxxxdisplay:		block;
 		margin-left:	0;
 	}
 	
